[tool.poetry]
name = "programmer-gpt"
version = "0.1.0"
description = ""
authors = ["ratnadeep-dentsu <ratnadeep.bhattacharyya@dentsu.com>"]
readme = "README.md"
packages = [{include = "programmer_gpt"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.20.0"
watchdog = "^3.0.0"
langchain = "^0.0.129"
openai = "^0.27.2"
streamlit-chat = "^0.0.2.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
