[tool.poetry]
name = "programmer-gpt"
version = "0.1.0"
description = ""
authors = ["ratnadeep007 <ratnadeepofghato@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.20.0"
watchdog = "^3.0.0"
langchain = "^0.0.129"
openai = "^0.27.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
